--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
+
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lukiiy's Bad Aim Game</title>
+    <title>Lukiiy BadAimGame ♡</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="apple-mobile-web-app-title" content="Lukiiy's BadAimGame &lt;3">
+    <meta name="application-name" content="Lukiiy's BadAimGame &lt;3">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="BadAimGame">
+    <meta name="author" content="lukiiy">
     <script type="text/javascript">
       window.errors = []
       if (window.addEventListener) {
@@ -405,7 +418,6 @@ color: #ffffff;
         for="add-sprite-file"
         title="Add Scratch sprite to project"
       ></label>
-      <button id="download-btn" aria-label="Download Scratch project"></button>
       <button id="start-btn" aria-label="Start"></button>
       <button id="stop-btn" aria-label="Stop" disabled></button>
       <button id="fullscreen-btn" aria-label="Enter/exit fullscreen"></button>
